[package]
name = "leedor"
edition = "2018"
version = "0.1.0"
license = "CC0-1.0"
description = "EPUB reader"
authors = ["Jonathan Reyes <j@jreyes.org>"]
repository = "https://github.com/jreyes33/leedor"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.6"
js-sys = "0.3.10"
roxmltree = "0.4.1"
wasm-bindgen = "0.2.33"
console_error_panic_hook = { version = "0.1.5", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.zip]
version = "0.5.0"
default-features = false
features = ["deflate", "time"]

[dependencies.web-sys]
version = "0.3.10"
features = [
  "Blob",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "Window",
  "console",
]

[features]
default = ["console_error_panic_hook"]
