[package]
name = "leedor"
edition = "2018"
version = "0.1.0"
license = "CC0-1.0"
description = "EPUB reader"
authors = ["Jonathan Reyes <j@jreyes.org>"]
repository = "https://github.com/jreyes33/leedor"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

# Uncomment to optimize for size
# [profile.release]
# lto = true
# opt-level = "s"

[dev-dependencies]
lazy_static = "1.2.0"

[dependencies]
base64 = "0.10.1"
cfg-if = "0.1.6"
js-sys = "0.3.10"
minidom = "0.10.0"
quick-xml = "0.13.2"
url = "1.7.2"
wasm-bindgen = "0.2.33"
console_error_panic_hook = { version = "0.1.5", optional = true }
wee_alloc = { git = "https://github.com/rustwasm/wee_alloc", optional = true }

[dependencies.zip]
version = "0.5.0"
default-features = false
features = ["deflate", "time"]

[dependencies.web-sys]
version = "0.3.10"
features = [
  "Blob",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "ShadowRoot",
  "ShadowRootInit",
  "ShadowRootMode",
  "Window",
  "console",
]
